crates/toml_edit/tests/snapshots/invalid/float/leading-dot.stderr
TOML parse error at line 1, column 15
  |
1 | leading-dot = .12345
  |               ^
invalid mantissa, expected digits
